allianz-bluegreen-deployment/nodejs-app/k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
      version: blue
  template:
    metadata:
      labels:
        app: nodejs-app
        version: blue
    spec:
      containers:
        - name: nodejs-app
          image: shahebaz/nodejs-app:latest
          ports:
            - containerPort: 8080
