allianz-bluegreen-deployment/nodejs-app/k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      version: green
  template:
    metadata:
      labels:
        app: nodejs
        version: green
    spec:
      containers:
      - name: nodejs
        image: your-dockerhub/nodejs-app:green
        ports:
        - containerPort: 3000
