allianz-bluegreen-deployment/nodejs-app/k8s/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-blue
spec:
  selector:
    app: nodejs-app
    version: blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
