allianz-bluegreen-deployment/nodejs-app/k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-green
spec:
  selector:
    app: nodejs-app
    version: green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
