allianz-bluegreen-deployment/nodejs-app/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodejs-app-gateway
  namespace: allianz-blue-green
spec:
  selector:
    istio: ingressgateway   # use istio-ingressgateway from istio-system namespace
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
