allianz-bluegreen-deployment/nodejs-app/k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nodejs-app
spec:
  host: nodejs-app
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
