allianz-bluegreen-deployment/nodejs-app/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-app
  namespace: allianz-blue-green
spec:
  hosts:
    - "*"
  gateways:
    - nodejs-app-gateway
  http:
    - route:
        - destination:
            host: nodejs-app
            subset: blue
          weight: 0
        - destination:
            host: nodejs-app
            subset: green
          weight: 100
